[gd_scene load_steps=11 format=3 uid="uid://v16len3j8x3"]

[ext_resource type="Texture2D" uid="uid://clppl7iu66bha" path="res://assets/sprites/tilesets/Texture/TX Village Props.png" id="1_poyrf"]
[ext_resource type="Script" uid="uid://deafds22hosqt" path="res://src/world/props/lantern.gd" id="1_wygmx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wygmx"]
atlas = ExtResource("1_poyrf")
region = Rect2(941, 32, 16, 97)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbodu"]
atlas = ExtResource("1_poyrf")
region = Rect2(976, 37, 33, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh8w5"]
atlas = ExtResource("1_poyrf")
region = Rect2(310, 768, 3, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdpg4"]
atlas = ExtResource("1_poyrf")
region = Rect2(1002, 6, 13, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_poyrf"]
atlas = ExtResource("1_poyrf")
region = Rect2(969, 6, 13, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhhrk"]
size = Vector2(16, 10)

[sub_resource type="Gradient" id="Gradient_wygmx"]
offsets = PackedFloat32Array(0.0775623, 0.191136, 0.515235)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0.303318, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_rbodu"]
gradient = SubResource("Gradient_wygmx")
width = 256
height = 256
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="Lantern" type="StaticBody2D"]
script = ExtResource("1_wygmx")

[node name="LanterPilar" type="Sprite2D" parent="."]
texture = SubResource("AtlasTexture_wygmx")
offset = Vector2(0, -48)
metadata/_edit_lock_ = true

[node name="LanterHolder" type="Sprite2D" parent="."]
position = Vector2(20.5, -84)
texture = SubResource("AtlasTexture_rbodu")
metadata/_edit_lock_ = true

[node name="LanterStrings" type="Sprite2D" parent="."]
position = Vector2(34.5, -76)
scale = Vector2(1, 0.8125)
texture = SubResource("AtlasTexture_sh8w5")
metadata/_edit_lock_ = true

[node name="LanternOff" type="Sprite2D" parent="."]
position = Vector2(34.5, -54)
texture = SubResource("AtlasTexture_pdpg4")
metadata/_edit_lock_ = true

[node name="LanternOn" type="Sprite2D" parent="."]
position = Vector2(34.5, -54)
texture = SubResource("AtlasTexture_poyrf")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_lhhrk")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(34, -52)
scale = Vector2(1.5, 1.5)
color = Color(0.964706, 0.552941, 0.207843, 1)
texture = SubResource("GradientTexture2D_rbodu")
metadata/_edit_lock_ = true
